@@ -26,9 +26,9 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
     compile 'org.apache.logging.log4j:log4j-api:2.17.2'
     compile 'org.apache.logging.log4j:log4j-core:2.17.2'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.14.0.0'
-    compile 'org.springframework:spring-beans:5.3.8'
-    compile 'org.springframework:spring-jdbc:5.3.8'
+    compile 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+    compile 'org.springframework:spring-beans:5.3.9'
+    compile 'org.springframework:spring-jdbc:5.3.9'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
