@@ -1,14 +1,10 @@
 package edu.mcw.rgd.pipelines.agr;
 
 import edu.mcw.rgd.datamodel.*;
-import edu.mcw.rgd.process.mapping.MapManager;
 
-import java.text.SimpleDateFormat;
 import java.util.*;
 
-public class CurationGenes {
-
-    static SimpleDateFormat sdf_agr = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSXXX");
+public class CurationGenes extends CurationObject {
 
     public List<GeneModel> gene_ingest_set = new ArrayList<>();
 
@@ -33,20 +29,16 @@ public class CurationGenes {
             m.date_updated = sdf_agr.format(id.getLastModifiedDate());
         }
 
-        if( curie.startsWith("HGNC") ) {
-            List<String> secondaryIds = new ArrayList<>();
-            secondaryIds.add("RGD:"+g.getRgdId());
-            m.secondary_identifiers = secondaryIds;
-        }
-
+        m.secondary_identifiers = getSecondaryIdentifiers(curie, g.getRgdId(), dao);
         m.synonyms = getSynonyms(g.getRgdId(), dao);
-        m.genomic_locations = getGenomicLocations(g, dao);
+        m.genomic_locations = getGenomicLocations(g.getRgdId(), g.getSpeciesTypeKey(), dao);
         m.cross_references = getCrossReferences(g, dao, canonicalProteins);
 
         gene_ingest_set.add(m);
 
         return m;
     }
+
 
     final String[] aliasTypes = {"old_gene_name","old_gene_symbol"};
     List getSynonyms(int rgdId, Dao dao) throws Exception {
@@ -64,74 +56,6 @@ public class CurationGenes {
         return results;
     }
 
-    List getGenomicLocations(Gene g, Dao dao) throws Exception {
-
-        int mapKey1 = 0, mapKey2 = 0; // NCBI/Ensembl assemblies
-        if( g.getSpeciesTypeKey()==SpeciesType.HUMAN ) {
-            mapKey1 = 38;
-            mapKey2 = 40;
-        } else {
-            mapKey1 = 372;
-            mapKey2 = 373;
-        }
-        String assembly = MapManager.getInstance().getMap(mapKey1).getName();
-
-        List<MapData> mds = getLoci(g.getRgdId(), mapKey1, mapKey2, dao);
-        if( mds.isEmpty() ) {
-            return null;
-        }
-        List results = new ArrayList();
-        for( MapData md: mds ) {
-            HashMap loc = new HashMap();
-            loc.put("end", md.getStopPos());
-            loc.put("has_assembly", assembly);
-            loc.put("internal", false);
-            loc.put("object", md.getChromosome());
-            loc.put("predicate", "RGD");
-            loc.put("start", md.getStartPos());
-            loc.put("subject", "RGD");
-            results.add(loc);
-        }
-        return results;
-    }
-
-    // get gene loci from NCBI and Ensembl assemblies, and merge the loci that overlap
-    List<MapData> getLoci(int rgdId, int mapKey1, int mapKey2, Dao dao) throws Exception {
-
-        List<MapData> mds1 = dao.getMapData(rgdId, mapKey1);
-        List<MapData> mds2 = dao.getMapData(rgdId, mapKey2);
-
-        List<MapData> mds = new ArrayList<>();
-        mergeLoci(mds, mds1);
-        mergeLoci(mds, mds2);
-
-        return mds;
-    }
-
-    void mergeLoci(List<MapData> mds1, List<MapData> mds2) {
-
-        for( MapData md2: mds2 ) {
-
-            // look for overlapping positions
-            boolean overlappingPos = false;
-            for( MapData md1: mds1 ) {
-                if( !md1.getChromosome().equals(md2.getChromosome()) ) {
-                    continue;
-                }
-                // same chr:
-                if( md2.getStartPos()<=md1.getStopPos()  &&  md1.getStartPos()<=md2.getStopPos() ) {
-                    // positions overlap: update 'md1'
-                    md1.setStartPos(Math.min(md1.getStartPos(), md2.getStartPos()));
-                    md1.setStopPos(Math.max(md1.getStopPos(), md2.getStopPos()));
-                    overlappingPos = true;
-                    break;
-                }
-            }
-            if( !overlappingPos ) {
-                mds1.add(md2);
-            }
-        }
-    }
 
     List getCrossReferences(Gene g, Dao dao, Set<String> canonicalProteins) throws Exception {
 
@@ -153,7 +77,7 @@ public class CurationGenes {
             xref.put("curie", curie);
             xref.put("display_name", id.getAccId());
             xref.put("prefix", "UniProtKB");
-            xref.put("pageAreas", pageAreas);
+            xref.put("page_areas", pageAreas);
             results.add(xref);
         }
         return results;
